--- a/index-dev.html
+++ b/index-dev.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
 		<!-- initial scaling on device and zooming limitations -->
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
 		<!-- styles -->
 		<link rel="stylesheet" type="text/css" href="css/screen.css" />
