--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
         <!-- styles -->
-        <link rel="stylesheet" type="text/css" href="/css/test.css" />
+        <link rel="stylesheet" type="text/css" href="css/test.css" />
 
         <!-- scripts -->
-        <script type="text/javascript" src="/js/lib/jquery-1.8.3.js"></script>
-        <script type="text/javascript" src="/js/lib/jquery.cookie.js"></script>
-        <script type="text/javascript" src="/js/lib/handlebars-1.0.0-rc.3.js"></script>
+        <script type="text/javascript" src="js/lib/jquery-1.8.3.js"></script>
+        <script type="text/javascript" src="js/lib/jquery.cookie.js"></script>
+        <script type="text/javascript" src="js/lib/handlebars-1.0.0-rc.3.js"></script>
         <script type="text/javascript">
             $(document).ready(function($) {
                 var testGroups = [{
