#1481: Replaced Google Chart API with ChartJs to allow for offline viewing of the report.

--- a/report.html
+++ b/report.html
@@ -34,6 +34,7 @@
 
 		<!--[if lte IE 8]>
 			<script type="text/javascript" src="js/lib/respond.min.js"></script>
+            <script type="text/javascript" src="js/lib/excanvas/excanvas.compiled.js"></script>
 		<![endif]-->
 	</head>
 	<body>
