--- a/report-dev.html
+++ b/report-dev.html
@@ -16,6 +16,7 @@
 
 		<!--[if lte IE 8]>
 			<script type="text/javascript" src="js/lib/respond.min.js"></script>
+			<script type="text/javascript" src="js/lib/excanvas/excanvas.js"></script>
 		<![endif]-->
 	</head>
 	<body>
