#1508: Use report id to retrieve report details.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
         <script type="text/javascript">
             $(document).ready(function($) {
                 var testGroups = [{
-                        title: '',
+                        title: 'Vetstreet',
+                        tests: [{
+                                type: 'Combined - Cat & Dog tests',
+                                url: 'report.html?report=data/combined.json'
+                            }]
+                        },{
+                        title: 'Antech',
                         tests: [{
                                 type: 'Combined - Cat & Dog tests',
                                 url: 'report.html?report=data/combined.json'
