--- a/report-dev.html
+++ b/report-dev.html
@@ -8,15 +8,15 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
 		<!-- styles -->
-		<link rel="stylesheet" type="text/css" href="css/screen.css" />
+		<link rel="stylesheet" type="text/css" href="/css/screen.css" />
 
 		<!-- initialize application -->
-		<script type="text/javascript" src="js/require-config.js"></script>
-		<script type="text/javascript" src="js/lib/require.js" data-main="main"></script>
+		<script type="text/javascript" src="/js/require-config.js"></script>
+		<script type="text/javascript" src="/js/lib/require.js" data-main="main"></script>
 
 		<!--[if lte IE 8]>
-			<script type="text/javascript" src="js/lib/respond.min.js"></script>
-			<script type="text/javascript" src="js/lib/excanvas/excanvas.js"></script>
+			<script type="text/javascript" src="/js/lib/respond.min.js"></script>
+			<script type="text/javascript" src="/js/lib/excanvas/excanvas.js"></script>
 		<![endif]-->
 	</head>
 	<body>
