--- a/report.html
+++ b/report.html
@@ -8,12 +8,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
 		<!-- styles -->
-		<link rel="stylesheet" type="text/css" href="css/screen.css" />
+		<link rel="stylesheet" type="text/css" href="/css/screen.css" />
 
 		<!-- initialize application -->
-		<script type="text/javascript" src="js/require-config.js"></script>
-		<script type="text/javascript" src="js/lib/require.min.js"></script>
-		<script type="text/javascript" src="dist/main.js"></script>
+		<script type="text/javascript" src="/js/require-config.js"></script>
+		<script type="text/javascript" src="/js/lib/require.min.js"></script>
+		<script type="text/javascript" src="/dist/main.js"></script>
         <script>
             // Override default settings with prod environment configuration
             require.config({
@@ -33,8 +33,8 @@
         </script>
 
 		<!--[if lte IE 8]>
-			<script type="text/javascript" src="js/lib/respond.min.js"></script>
-            <script type="text/javascript" src="js/lib/excanvas/excanvas.compiled.js"></script>
+			<script type="text/javascript" src="/js/lib/respond.min.js"></script>
+            <script type="text/javascript" src="/js/lib/excanvas/excanvas.compiled.js"></script>
 		<![endif]-->
 	</head>
 	<body>
