--- a/report-dev.html
+++ b/report-dev.html
@@ -11,7 +11,7 @@
 		<link rel="stylesheet" type="text/css" href="/css/screen.css" />
 
 		<!-- initialize application -->
-		<script type="text/javascript" src="/js/require-config.js"></script>
+		<script type="text/javascript" src="/js/healthtracks-require-config.js"></script>
 		<script type="text/javascript" src="/js/lib/require.js" data-main="main"></script>
 
 		<!--[if lte IE 8]>
