--- a/report.html
+++ b/report.html
@@ -11,9 +11,9 @@
 		<link rel="stylesheet" type="text/css" href="/css/screen.css" />
 
 		<!-- initialize application -->
-		<script type="text/javascript" src="/js/require-config.js"></script>
+		<script type="text/javascript" src="/js/healthtracks-require-config.js"></script>
 		<script type="text/javascript" src="/js/lib/require.min.js"></script>
-		<script type="text/javascript" src="/dist/main.js"></script>
+		<script type="text/javascript" src="/js/healthtracks-report.js"></script>
         <script>
             // Override default settings with prod environment configuration
             require.config({
@@ -26,7 +26,7 @@
 
                 paths: {
                     // Load optimized js file
-                    "main": "../dist/main"
+                    "main": "../js/healthtracks-report"
                 }
             });
             require(["main"]);
