--- a/password-forgot.html
+++ b/password-forgot.html
@@ -9,7 +9,7 @@
 
 		<!-- styles -->
         <link rel="stylesheet" type="text/css" href="js/lib/HTML5-placeholder-polyfill/placeholder_polyfill.min.css" />
-		<link rel="stylesheet" type="text/css" href="css/screen.css" />
+		<link rel="stylesheet" type="text/css" href="css/healthtracks.css" />
 
         <script type="text/javascript" src="js/lib/jquery-1.8.3.js"></script>
         <script type="text/javascript" src="js/lib/jquery-resize/jquery.ba-resize.min.js"></script>
