--- a/report-dev.html
+++ b/report-dev.html
@@ -8,7 +8,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
 		<!-- styles -->
-		<link rel="stylesheet" type="text/css" href="/css/screen.css" />
+		<link rel="stylesheet" type="text/css" href="/css/healthtracks.css" />
 
 		<!-- initialize application -->
 		<script type="text/javascript" src="/js/healthtracks-require-config.js"></script>
