--- a/report.html
+++ b/report.html
@@ -8,12 +8,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
 		<!-- styles -->
-		<link rel="stylesheet" type="text/css" href="/css/screen.css" />
+		<link rel="stylesheet" type="text/css" href="/css/healthtracks.css" />
 
 		<!-- initialize application -->
 		<script type="text/javascript" src="/js/healthtracks-require-config.js"></script>
 		<script type="text/javascript" src="/js/lib/require.min.js"></script>
-		<script type="text/javascript" src="/js/healthtracks-report.js"></script>
+		<script type="text/javascript" src="/js/healthtracks-report.min.js"></script>
         <script>
             // Override default settings with prod environment configuration
             require.config({
@@ -26,7 +26,7 @@
 
                 paths: {
                     // Load optimized js file
-                    "main": "../js/healthtracks-report"
+                    "main": "../js/healthtracks-report.min"
                 }
             });
             require(["main"]);
