#1508: Updated image location.

--- a/login.html
+++ b/login.html
@@ -28,7 +28,7 @@
                     <!-- logo -->
                     <div class="yui3-u-5-8 yui3-u-5-8-phone">
                         <div class="yui3-u-c">
-                            <img class="logo" src="images/page/logo.png" alt="Healthtracks" />
+                            <img class="logo" src="images/healthtracks/page/logo.png" alt="Healthtracks" />
                         </div>
                     </div>
                 </div>
@@ -65,7 +65,7 @@
 
                 <div class="yui3-u-3-8">
                     <div class="yui3-u-c address-section">
-                        <img class="yui3-hidden-phone" src="images/login/pets-unlimited.png" />
+                        <img class="yui3-hidden-phone" src="images/healthtracks/login/pets-unlimited.png" />
 
                         <p class="address">
                             <span class="line name">Pets Unlimited</span>
