--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <script type="text/javascript" src="js/lib/jquery-1.8.3.js"></script>
         <script type="text/javascript" src="js/lib/jquery.cookie.js"></script>
         <script type="text/javascript" src="js/lib/handlebars-1.0.0-rc.3.js"></script>
+        <script type="text/javascript" src="js/lib/json3.js"></script>
         <script type="text/javascript">
             $(document).ready(function($) {
                 var testGroups = [{
@@ -22,6 +23,19 @@
                                 type: 'Combined - Cat & Dog tests',
                                 url: '/abcanimalhospital/hospital_reports?report=/data/combined.json',
                                 cookies: {l: 5555}
+                            }, {
+                                type: 'Error - Invalid token',
+                                url: '/abcanimalhospital/hospital_reports?report=/data/combined.json',
+                                cookies: {
+                                    l: 5555,
+                                    response_override: JSON.stringify({
+                                        healthtracks_report_details: {
+                                            httpStatus: 200,
+                                            status: 'error',
+                                            error_msg: 'Token is invalid.'
+                                        }
+                                    })
+                                }
                             }]
                         },{
                         title: 'Antech',
